apps/kobo/kpi/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kpi
  namespace: kobo
  labels:
    app: kpi

spec:
  replicas: 1

  selector:
    matchLabels:
      app: kpi

  template:
    metadata:
      labels:
        app: kpi

    spec:
      containers:
        - name: kpi
          image: kobotoolbox/kpi:2.026.13a
          imagePullPolicy: IfNotPresent

          workingDir: /srv/src/kpi

          ports:
            - containerPort: 8000

          volumeMounts:
            - name: kpi-media
              mountPath: /srv/src/kpi/media

            - name: kpi-static
              mountPath: /srv/src/kpi/static

            - name: kpi-logs
              mountPath: /srv/src/kpi/logs

      volumes:
        - name: kpi-media
          emptyDir: {}

        - name: kpi-static
          emptyDir: {}

        - name: kpi-logs
          emptyDir: {}
