apps/kobo/kpi/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: kpi
  namespace: kobo

spec:
  selector:
    app: kpi

  ports:
    - name: http
      port: 8000
      targetPort: 8000
