apps/kobo/kpi/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: kpi-ingress
  namespace: kobo

  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"

spec:
  ingressClassName: nginx

  rules:
    - host: kpi.shopnoltd.dpdns.org
      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: kpi
                port:
                  number: 8000

    - host: health.shopnoltd.dpdns.org
      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: kpi
                port:
                  number: 8000
